Fix dark mode colors

--- a/style.sass
+++ b/style.sass
@@ -111,10 +111,12 @@ a:not(.unstyled)
 			background: linear-gradient(#2221, #2221), linear-gradient(var(--accent), var(--accent))
 
 		@media (prefers-color-scheme: dark)
-			background: linear-gradient(#222a, #222a), linear-gradient(var(--accent), var(--accent))
+			background: linear-gradient(#2229, #2229), linear-gradient(var(--accent), var(--accent))
 			border-color: var(--accent)
 			color: white !important
 
+			&.description
+				background: linear-gradient(#222c, #222c), linear-gradient(var(--accent), var(--accent))
 .deprecated
 	text-decoration: line-through !important
 	filter: brightness(0.9) grayscale(0.75)
